[project]
name = "airo-dataset-tools"
version = "2026.5.0"
description = "Scripts for loading and converting datasets for the Ghent University AI and Robotics Lab"
authors = [{ name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pydantic>2.0.0",  # pydantic 2.0.0 has a lot of breaking changes
    "opencv-contrib-python==4.10.0.84",  # See airo-camera-toolkit pyproject.toml for explanation
    "pycocotools",
    "xmltodict",
    "tqdm",
    "fiftyone",  # visualization
    "Pillow",
    "types-Pillow",
    "albumentations",
    "click",
    "airo-typing>=2026.1.0",
    "airo-spatial-algebra>=2026.1.0",
]

[project.scripts]
airo-dataset-tools = "airo_dataset_tools.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
airo_dataset_tools = ["py.typed"]
